fix: [AIFLY-1764] Avoid double border for last row of Drilldown modal (#11124)

--- a/apps/helpdesk/src/domains/reporting/pages/common/drill-down/DrillDownTable.less
+++ b/apps/helpdesk/src/domains/reporting/pages/common/drill-down/DrillDownTable.less
@@ -59,6 +59,10 @@
             &:not(:last-child) td {
                 border-bottom: 1px solid var(--border-neutral-subtle);
             }
+
+            &:last-child {
+                border-bottom: none;
+            }
         }
     }
 
